--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -6,7 +6,7 @@
 @mixin style-after-element($width, $height, $bg-color, $bs-color) {
   content: "";
   bottom: 0;
-  left: 0;
+  left: -2px;
   width: $width;
   height: $height;
   position: absolute;
