--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -36,6 +36,10 @@
       height: 2.5rem;
     }
 
+    &--linkedin {
+      height: 2.5rem;
+    }
+
     &:active {
       transform: scale(1.1) translateY(2px);
     }
@@ -56,6 +60,7 @@
     display: flex;
     flex-direction: column;
     transition: all 0.3s;
+    transform: translateY(-3rem);
 
     &--icon:hover {
       fill: black;
