--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,10 +15,12 @@ $color-black: #000;
 
 $color-default-text: rgba(41, 42, 45, 0.85);
 $color-background-2: #e7eff4;
+// rgb(216, 233, 243) blue colour in linear gradient
 
 //font
 $default-font-size: 1.6rem;
 
+// #dbf1ff this might be a better colour to use for the background blue, rather than whatever i currently have. (nice and lighter version)
 /*
 possible colour variants;
 #e9f7ff
