--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -2,12 +2,111 @@
   //   background-color: whitesmoke;
   background-color: rgb(216, 233, 243);
   grid-column: full-start / full-end;
-  z-index: -2;
+  z-index: 1;
   padding: 4rem 2rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &-container {
+    background-color: transparent;
+    // height: 50rem;
+    width: 80%;
+    display: flex;
+    align-items: center;
+
+    & > * {
+      margin-top: 8rem;
+    }
+
+    &__pictures {
+      background-color: whitesmoke;
+      width: 55%;
+      height: 50rem;
+      border-radius: 5px;
+      //   border: 1px solid white;
+      //   margin: 0 1rem;
+    }
+
+    &__info {
+      //   background-color: #d2d2e0;
+      //   background-color: lighten(#d6d7e6, 5%);
+      background-color: $color-almost-black;
+      border: 1px solid black;
+      height: 35rem;
+      width: 45%;
+      padding: 2rem 4rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      border-radius: 5px;
+
+      //   &:nth-child(2n + 1) {
+      //     align-items: flex-end;
+      //   }
+
+      & > * {
+        margin-top: 2rem;
+      }
+
+      & .heading--3 {
+        box-shadow: inset 0 -1.2rem 0 #4f4f4f;
+        font-size: 2.6rem;
+        color: lighten(#d6d7e6, 5%);
+      }
+
+      & .heading--5 {
+        color: lighten(#d6d7e6, 5%);
+      }
+
+      &--skills {
+        margin-top: 4rem;
+        // display: flex;
+        // justify-content: center;
+        // width: 100%;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+
+        &-item {
+          list-style: none;
+          padding: 0.5rem 1rem;
+          color: $color-almost-black;
+          background-color: lighten(#d6d7e6, 5%);
+          border-radius: 2px;
+          &:not(:last-child) {
+            margin-right: 2rem;
+          }
+        }
+      }
+
+      &--links {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        margin-top: 2rem;
+
+        &-link-btn {
+          background-color: lighten(#d6d7e6, 5%);
+          border: none;
+          border-radius: 5px;
+          padding: 1rem;
+          list-style: none;
+          border: 1px solid gray;
+          cursor: pointer;
+          transition: all 0.4s;
+
+          &:hover {
+            background-color: whitesmoke;
+            color: black;
+            border: 1px solid black;
+            transform: scale(1.025);
+          }
+        }
+      }
+    }
+  }
 
   & .heading--2 {
     position: relative;
