--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -61,7 +61,7 @@
       }
 
       &--skills {
-        margin-top: 4rem;
+        margin-top: 2.5rem;
         // display: flex;
         // justify-content: center;
         // width: 100%;
@@ -75,6 +75,7 @@
           color: $color-almost-black;
           background-color: lighten(#d6d7e6, 5%);
           border-radius: 2px;
+
           &:not(:last-child) {
             margin-right: 2rem;
           }
@@ -85,23 +86,34 @@
         display: flex;
         width: 100%;
         justify-content: center;
-        margin-top: 2rem;
+        margin-top: 3.5rem;
 
         &-link-btn {
           background-color: lighten(#d6d7e6, 5%);
           border: none;
-          border-radius: 5px;
-          padding: 1rem;
+          margin: 0 2rem;
+          text-transform: uppercase;
+          font-weight: 400;
+          color: $color-almost-black;
+          //   border-radius: 5px;
+          padding: 0.5rem 1.5rem;
           list-style: none;
-          border: 1px solid gray;
           cursor: pointer;
+          box-shadow: 5px 5px 0 darken(rgb(216, 233, 243), 4%);
+          position: relative;
+          top: 0;
+          left: 0;
           transition: all 0.4s;
 
           &:hover {
-            background-color: whitesmoke;
-            color: black;
-            border: 1px solid black;
-            transform: scale(1.025);
+            transform: translate(5px, 5px);
+            box-shadow: 0px 0px 0 darken(rgb(216, 233, 243), 4%);
+            background-color: darken(#d6d7e6, 1%);
+          }
+
+          &:active {
+            transform: translate(5px, 8px);
+            box-shadow: 0px 0px 0 darken(rgb(216, 233, 243), 4%);
           }
         }
       }
