change to skills section layout + margin adjustments everywhere.

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -10,7 +10,7 @@
   &__container {
     display: flex;
     justify-content: center;
-    padding: 6rem;
+    padding: 12rem 6rem;
   }
 
   &__text,
