--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
   margin-top: 1.5rem; }
 
 .u-margin-top-medium {
-  margin-top: 3rem; }
+  margin-top: -3rem; }
 
 .u-margin-bottom-very-small {
   margin-bottom: 1rem; }
@@ -217,7 +217,8 @@ a {
   flex-direction: column;
   align-items: center; }
   .about .heading--2 {
-    position: relative; }
+    position: relative;
+    margin-bottom: 6rem; }
     .about .heading--2::after {
       content: "";
       bottom: 0;
@@ -237,8 +238,9 @@ a {
   background: linear-gradient(whitesmoke, #d8e9f3);
   grid-column: full-start / full-end;
   text-align: center;
-  padding: 4rem 0;
-  z-index: -2; }
+  padding: 4rem;
+  z-index: -2;
+  margin-top: 4rem; }
   .skills .heading--2 {
     position: relative;
     display: inline-block; }
@@ -256,9 +258,7 @@ a {
   .skills__whole {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 4rem;
-    margin-bottom: 3rem; }
+    align-items: center; }
   .skills__container {
     padding: 3rem;
     background-color: none;
@@ -272,14 +272,19 @@ a {
     flex-wrap: wrap; }
   .skills__details {
     list-style: none;
-    padding: 1rem;
-    width: 10rem; }
+    padding: 2rem;
+    width: 10rem;
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
     .skills__details--icon {
-      width: 4rem;
-      height: 4rem; }
+      width: 7rem;
+      height: 7rem; }
     .skills__details--text {
-      font-size: 1.2rem;
-      font-weight: 400;
+      margin-top: 1rem;
+      font-size: 1.5rem;
+      font-weight: 300;
       color: #292a2d; }
 
 .projects {
@@ -294,9 +299,10 @@ a {
     background-color: transparent;
     width: 80%;
     display: flex;
-    align-items: center; }
-    .projects-container > * {
-      margin-top: 8rem; }
+    align-items: center;
+    margin-top: 7rem; }
+    .projects-container--project-1 {
+      margin-top: 5rem; }
     .projects-container__pictures {
       background-color: whitesmoke;
       width: 55%;
@@ -356,7 +362,7 @@ a {
           .projects-container__info--links-link-btn:hover {
             transform: translate(5px, 5px);
             box-shadow: 0px 0px 0 #c8e0ee;
-            background-color: #d3d4e4; }
+            background-color: #c8e0ee; }
           .projects-container__info--links-link-btn:active {
             transform: translate(5px, 8px);
             box-shadow: 0px 0px 0 #c8e0ee; }
@@ -381,7 +387,7 @@ a {
   .contact__container {
     display: flex;
     justify-content: center;
-    padding: 6rem; }
+    padding: 12rem 6rem; }
   .contact__text, .contact__form {
     display: flex;
     flex-direction: column;
