--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -6,8 +6,9 @@
   grid-column: full-start / full-end;
 
   text-align: center;
-  padding: 4rem 0;
+  padding: 4rem;
   z-index: -2;
+  margin-top: 4rem;
 
   & .heading--2 {
     position: relative;
@@ -27,8 +28,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 4rem;
-    margin-bottom: 3rem;
   }
 
   &__container {
@@ -50,17 +49,22 @@
 
   &__details {
     list-style: none;
-    padding: 1rem;
+    padding: 2rem;
     width: 10rem;
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &--icon {
-      width: 4rem;
-      height: 4rem;
+      width: 7rem;
+      height: 7rem;
     }
 
     &--text {
-      font-size: 1.2rem;
-      font-weight: 400;
+      margin-top: 1rem;
+      font-size: 1.5rem;
+      font-weight: 300;
       color: $color-almost-black;
     }
   }
