--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,27 +1,28 @@
 .skills {
   //   background-color: darken($color-background-2, 2%);
-  background: linear-gradient(rgb(245, 245, 245), rgb(216, 233, 243));
   //   background: linear-gradient(rgb(245, 245, 245), rgb(207, 223, 233));
+  background-color: rgba(216, 233, 243, 0.6);
 
   grid-column: full-start / full-end;
 
   text-align: center;
-  padding: 4rem;
+  padding: 8rem 2rem;
   z-index: -2;
   margin-top: 4rem;
 
   & .heading--2 {
     position: relative;
     display: inline-block;
+    box-shadow: inset 0 -2.5rem 0 white;
 
-    &::after {
-      @include style-after-element(
-        12rem,
-        3rem,
-        darken($color-background-2, 7%),
-        darken($color-background-2, 10%)
-      );
-    }
+    // &::after {
+    //   @include style-after-element(
+    //     12rem,
+    //     3rem,
+    //     darken($color-background-2, 7%),
+    //     darken($color-background-2, 10%)
+    //   );
+    // }
   }
 
   &__whole {
@@ -51,7 +52,7 @@
     list-style: none;
     padding: 2rem;
     width: 10rem;
-    margin-right: 2rem;
+    margin-right: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
