--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -8,7 +8,7 @@
   text-align: center;
   padding: 8rem 2rem;
   z-index: -2;
-  margin-top: 4rem;
+  //   margin-top: 4rem;
 
   & .heading--2 {
     position: relative;
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: -2rem;
   }
 
   &__container {
@@ -52,10 +53,11 @@
     list-style: none;
     padding: 2rem;
     width: 10rem;
-    margin-right: 3rem;
+    // margin-right: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: -2rem;
 
     &--icon {
       width: 7rem;
